2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-06
	* minor improvements to various plugins (excGen etc.)

2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-05
	* addjustments by Elmer

2010-06-02  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-04
	* new features of edmConfigFromDB script
	(as per Philipp's info)


2010-05-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-03
	* improve exception messages when rcv fails
	* add missing initialization to some quantities in process reg struct
	
2010-04-28  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-02 (01 used by Bill)
	* add InputTag to both EvFXXX in plugins
	
2010-04-26  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-00
	* addition of modules to insert evf pseudo-fed info
	and to select particular feds - and their cfi files
	* removed all getByType 

2010-04-13  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-17-18
	* put back fix by Bill to remove compilation warning

2010-04-13  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-17
	* moved some msgq-related classes here for common use 
	* reworked Vulture interface 
	
2010-03-25  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-14
	* add timestamp setting to errorstreamsource

2010-03-23  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-13
	* add missing slash in filename and print error from chmod

2010-03-23  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-12
	* add Vulture/CurlPoster features

2010-02-17  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-17-10
	* add python directory
	* add cfi.py files for ModuleWebRegistry, MicroStateService, and
	TimeProfierService

2010-02-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-17-09
	* update edmConfigFromDB: options --v1 (default) and --v0 added,
	allowing to switch between the old and new webserver. Kindly
	provided by Andrea Bocci.

2009-11-06  Emilio Meschi <emilio.meschi@cern.ch>
